<resources>
    <string name="app_name">LogicUniversity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="approve">Approve</string>
    <string name="reject">Reject</string>
    <string name="login">Login</string>
    <string name="remarks">Remarks</string>
    <string name="delegate">Delegate</string>
    <string name="terminate">Terminate</string>
    <string name="title_activity_store_clerk_main">StoreClerkMainActivity</string>

    <string name="depReqId">DepReqId</string>
    <string name="depName">Dept Name</string>
    <string name="repName">Rep Name</string>
    <string name="collPoint">Col-Point</string>
    <string name="collTime">Time</string>
    <string name="itemName">Item Name</string>
    <string name="qty">Qty</string>
</resources>
